lab3/lab3_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: lab3app
spec:
  type: NodePort
  selector:
    app: lab3app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31313 # Диапазон 30000 - 32767
