lab3/lab3_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  tls:
  - hosts:
      - lab3.pavel
    secretName: lab3-tls
  rules:
  - host: lab3.pavel
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 3000
